@@ -1,91 +1,70 @@
-FROM registry.access.redhat.com/ubi8/ubi
-MAINTAINER Hazelcast, Inc. Integration Team <info@hazelcast.com>
+FROM alpine:3.11
 
-ENV HZ_HOME /opt/hazelcast/
-ENV HZ_CP_MOUNT ${HZ_HOME}/external
-ENV LANG en_US.utf8
-ENV CERT_MANAGER_DIRECTORY=/tls
+# Versions of Hazelcast and Hazelcast plugins
+ARG HZ_VERSION=4.0
+ARG CACHE_API_VERSION=1.1.0
+ARG HZ_EUREKA_VERSION=1.1.1
+ARG JMX_PROMETHEUS_AGENT_VERSION=0.11.0
+ARG NETTY_VERSION=4.1.44.Final
+ARG NETTY_TCNATIVE_VERSION=2.0.28.Final
 
-ENV USER_NAME=hazelcast
-ENV USER_UID=10001
+# Build constants
+ARG HZ_HOME="/opt/hazelcast"
+ARG HZ_JAR="hazelcast-enterprise-all-${HZ_VERSION}.jar"
+ARG CACHE_API_JAR="cache-api-${CACHE_API_VERSION}.jar"
 
-ENV HZ_VERSION 4.0
+# Runtime constants / variables
+ENV HZ_HOME="${HZ_HOME}" \
+    CLASSPATH_DEFAULT="${HZ_HOME}/*:${HZ_HOME}/lib/*" \
+    JAVA_OPTS_DEFAULT="-Djava.net.preferIPv4Stack=true -Djava.util.logging.config.file=${HZ_HOME}/logging.properties -XX:MaxRAMPercentage=80.0 -XX:+UseParallelGC --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED" \
+    HZ_LICENSE_KEY="" \
+    PROMETHEUS_PORT="" \
+    PROMETHEUS_CONFIG="${HZ_HOME}/jmx_agent_config.yaml" \
+    LOGGING_LEVEL="" \
+    CLASSPATH="" \
+    JAVA_OPTS=""
 
-ARG HZ_MAVEN_DIR=${HZ_VERSION}
-ARG REPOSITORY_URL=https://repository.hazelcast.com
-ARG NETTY_VERSION=4.1.32.Final
-ARG NETTY_TCNATIVE_VERSION=2.0.20.Final
-
-LABEL name="hazelcast/hazelcast-enterprise-openshift-rhel" \
-      vendor="Hazelcast, Inc." \
-      version="8.1" \
-      architecture="x86_64" \
-      release="${HZ_VERSION}" \
-      url="http://www.hazelcast.com" \
-      summary="Hazelcast Openshift Image, certified to RHEL 8" \
-      description="Starts a standalone Hazelcast server instance to form a cluster based on kubernetes discovery inside Openshift" \
-      io.k8s.description="Starts a standalone Hazelcast server instance to form a cluster based on kubernetes discovery inside Openshift" \
-      io.k8s.display-name="Hazelcast" \
-      io.openshift.expose-services="5701:tcp" \
-      io.openshift.tags="hazelcast,java8,kubernetes,rhel8"
-
-RUN mkdir -p $HZ_HOME
-RUN mkdir -p $HZ_CP_MOUNT
-WORKDIR $HZ_HOME
-
-COPY *.sh *.xml $HZ_HOME/
-
-# Add licenses
-COPY licenses /licenses
-
-### Atomic Help File
-COPY description.md /tmp/
-
-### Disable subscription-manager plugin to prevent redundant logs
-RUN sed -i 's/^enabled=.*/enabled=0/g' /etc/dnf/plugins/subscription-manager.conf
-
-RUN dnf config-manager --disable && \
-    dnf update -y  && rm -rf /var/cache/dnf && \
-    dnf -y update-minimal --security --sec-severity=Important --sec-severity=Critical --setopt=tsflags=nodocs && \
-### Add your package needs to this installation line
-    dnf -y --setopt=tsflags=nodocs install java-1.8.0-openjdk-devel apr openssl wget &> /dev/null && \
-### Install go-md2man to help markdown to man conversion
-    dnf -y --setopt=tsflags=nodocs install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm &> /dev/null && \
-    dnf -y --setopt=tsflags=nodocs install golang-github-cpuguy83-go-md2man &> /dev/null && \
-    go-md2man -in /tmp/description.md -out /help.1 && \
-    dnf -y remove golang-github-cpuguy83-go-md2man && \
-    dnf -y clean all
-
-### add hazelcast enterprise
-RUN cd $HZ_HOME \
-    && wget -nv ${REPOSITORY_URL}/release/com/hazelcast/hazelcast-enterprise-all/${HZ_VERSION}/hazelcast-enterprise-all-${HZ_VERSION}.jar \
-    && wget -nv https://repo1.maven.org/maven2/javax/cache/cache-api/1.0.0/cache-api-1.0.0.jar \
-    && wget -nv https://repo1.maven.org/maven2/org/slf4j/jul-to-slf4j/1.7.12/jul-to-slf4j-1.7.12.jar
-
-### Adding maven wrapper, downloading Hazelcast Kubernetes discovery plugin and dependencies and cleaning up
-COPY mvnw $HZ_HOME/mvnw
-
-### Configure Hazelcast
-RUN useradd -l -u $USER_UID -r -g 0 -d $HZ_HOME -s /sbin/nologin -c "${USER_UID} application user" $USER_NAME \
-    && chown -R $USER_UID:0 $HZ_HOME $HZ_CP_MOUNT \
-    && chmod -R g=u $HZ_HOME $HZ_CP_MOUNT \
-    && chmod +x $HZ_HOME/*.sh
-
-### Switch to hazelcast user
-USER $USER_UID
-RUN cd mvnw && \
-    chmod +x mvnw && \
-    ./mvnw -f dependency-copy.xml \
-    -Dnetty.version=${NETTY_VERSION} \
-    -Dnetty-tcnative.version=${NETTY_TCNATIVE_VERSION} \
-    dependency:copy-dependencies && \
-    cd .. && \
-    rm -rf $HZ_HOME/mvnw && \
-    rm -rf $HZ_HOME/.m2 && \
-    chmod -R +r $HZ_HOME
-
-### Expose port
+# Expose port
 EXPOSE 5701
 
-### Start hazelcast standalone server.
-CMD ["/bin/sh", "-c", "./start.sh"]
+COPY *.xml *.sh *.yaml *.jar *.properties ${HZ_HOME}/
+
+# Install
+RUN echo "Updating Alpine system" \
+    && apk upgrade --update-cache --available \
+    && echo "Installing new APK packages" \
+    && apk add openjdk11-jre maven bash apr curl procps nss \
+    && echo "Installing old OpenSSL 1.0 from Alpine 3.8" \
+    && apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/v3.8/main/ openssl=1.0.2u-r0 \
+    && echo "Installing Hazelcast" \
+    && cd "${HZ_HOME}" \
+    && mkdir lib \
+    && curl -sf -o ${HZ_HOME}/lib/${HZ_JAR} \
+         -L https://repository.hazelcast.com/release/com/hazelcast/hazelcast-enterprise-all/${HZ_VERSION}/${HZ_JAR} \
+    && echo "Installing JCache" \
+    && curl -sf -o "${HZ_HOME}/lib/${CACHE_API_JAR}" \
+         -L "https://repo1.maven.org/maven2/javax/cache/cache-api/${CACHE_API_VERSION}/${CACHE_API_JAR}" \
+    && echo "Installing Hazelcast plugins" \
+    && mvn -f dependency-copy.xml \
+           -Dhazelcast-eureka-version=${HZ_EUREKA_VERSION} \
+           -Dnetty.version=${NETTY_VERSION} \
+           -Dnetty-tcnative.version=${NETTY_TCNATIVE_VERSION} \
+           dependency:copy-dependencies \
+    && echo "Maven clean-up" \
+    && apk del maven \
+    && rm -rf ~/.m2 \
+    && rm -f dependency-copy.xml \
+    && echo "Installing JMX Prometheus Agent" \
+    && curl -sf -o "${HZ_HOME}/lib/jmx_prometheus_javaagent.jar" \
+         -L "https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/${JMX_PROMETHEUS_AGENT_VERSION}/jmx_prometheus_javaagent-${JMX_PROMETHEUS_AGENT_VERSION}.jar" \
+    && echo "Granting read permission to ${HZ_HOME}" \
+    && chmod -R +r $HZ_HOME \
+    && echo "Setting Pardot ID to 'docker'" \
+    && echo 'hazelcastDownloadId=docker' > hazelcast-download.properties \
+    && echo "Cleaning APK packages" \
+    && rm -rf /var/cache/apk/*
+
+WORKDIR ${HZ_HOME}
+
+# Start Hazelcast server
+CMD ["/opt/hazelcast/start-hazelcast.sh"]
